# metatravel

./: .env  .gitignore  .vercelignore  docker-compose.yml  index.html  package.json  tailwind.config.ts  vercel.json
api/: index.py  pyproject.toml  requirements.txt
api/app/: auth.py  config.py  database.py
api/app/adapters/: base.py  duffel.py  seats_aero.py
api/app/api/: __init__.py  admin.py  airports.py  busca.py  buscas.py  cotacoes.py  cron.py  health.py  info.py  programas.py  trips.py
api/app/middleware/: rate_limit.py
api/app/models/: milhas.py
api/app/schemas/: busca.py  oferta.py
api/app/services/: cache.py  cash_enrichment.py  orquestrador.py  ptax.py  valoracao.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/adapters/: base.py  seats_aero.py
backend/app/api/: busca.py  cotacoes.py  health.py
backend/app/models/: __init__.py  milhas.py
backend/app/schemas/: busca.py  cotacao.py  oferta.py
backend/app/services/: orquestrador.py  valoracao.py
docs/: schema-real.md
src/: App.tsx  index.css
src/components/: AirportInput.tsx  Footer.tsx  Navbar.tsx
src/components/ui/: button.tsx
src/integrations/supabase/: types.ts
src/lib/: airports.ts  api.ts  cotacoes.ts  mockResults.ts
src/pages/: Admin.tsx  Busca.tsx  Cadastro.tsx  Historico.tsx  Index.tsx  Login.tsx  Resultados.tsx
supabase/: config.toml  seed_programas_v2.sql
supabase/migrations/: 20260409041617_eb0c0256-2226-405c-ab58-f492f12759fa.sql
